--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,11 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mridang.bluetooth"
-    android:versionCode="4"
-    android:versionName="0.4" >
+    android:versionCode="5"
+    android:versionName="0.5" >
 
     <uses-sdk
         android:minSdkVersion="17"
-        android:targetSdkVersion="17" />
+        android:targetSdkVersion="18" />
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
@@ -31,7 +31,16 @@
             <meta-data
                 android:name="description"
                 android:value="@string/extension_info" />
+            <meta-data
+                android:name="settingsActivity"
+                android:value=".WidgetSettings" />
         </service>
+
+        <activity
+            android:name="com.mridang.bluetooth.WidgetSettings"
+            android:exported="true" 
+            android:label="@string/preferences_title" >
+        </activity>
     </application>
 
 </manifest>
