--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,11 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mridang.bluetooth"
-    android:versionCode="10"
-    android:versionName="1.0" >
-
-    <uses-sdk
-        android:minSdkVersion="14"
-        android:targetSdkVersion="14" />
+    android:sharedUserId="com.mridang.dashclock"
+    android:versionCode="11"
+    android:versionName="1.1">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
@@ -15,12 +12,13 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/application_name"
-        android:theme="@android:style/Theme.Holo.Light.DarkActionBar" >
+        android:process="com.mridang.dashclock"
+        android:theme="@style/ExtensionTheme">
         <service
             android:name="com.mridang.bluetooth.BluetoothWidget"
             android:icon="@drawable/ic_dashclock"
             android:label="@string/extension_name"
-            android:permission="com.google.android.apps.dashclock.permission.READ_EXTENSION_DATA" >
+            android:permission="com.google.android.apps.dashclock.permission.READ_EXTENSION_DATA">
             <intent-filter>
                 <action android:name="com.google.android.apps.dashclock.Extension" />
             </intent-filter>
@@ -41,9 +39,8 @@
 
         <activity
             android:name="com.mridang.bluetooth.WidgetSettings"
-            android:exported="true" 
-            android:label="@string/preferences_title" >
-        </activity>
+            android:exported="true"
+            android:label="@string/preferences_title"/>
     </application>
 
 </manifest>
